@@ -14,10 +14,11 @@ ADDED   sha1 password support for apache htpasswd files -> see "sha_raw" encrypt
 ADDED   new icons for the new navigation
 ADDED   "Add new ..." on each overview page, to create new items
 
-CHANGED the whole navigation
+CHANGED the whole navigation bar
 CHANGED the style of the title on all pages
 CHANGED advanced-actions box
 CHANGED default behavior of multi-modify from "overwrite existing" to "add additional" (only for attributes that allow multiple values)
+CHANGED the pattern used to parse for SNMP TRAP services within the collector configuration: services ending on "*TRAP" (caps) will be removed.
 
 Release 1.3.0 (2011-12-11)
 
